syntax = "proto3";

package cart;

service CartService {
  rpc InitiateUser(InitiateUserRequest) returns (InitiateUserResponse);
}

message InitiateUserRequest {
  string userId = 1;
}

message InitiateUserResponse {
  string message = 1;
  bool isSucceeded = 2;
}